# hybrid-rag-engine

./: LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt
docs/architecture/: parsing.md
docs/reading/: building-llm-powered-applications.md
scripts/: dev.sh
src/hybrid_rag/: __init__.py  cli.py  cli_common.py
src/hybrid_rag/chunking/: __init__.py  base.py  cli.py  identifiers.py  service.py
src/hybrid_rag/chunking/strategies/: __init__.py  document_node_chunker.py
src/hybrid_rag/domain/: __init__.py  chunks.py  documents.py  enums.py
src/hybrid_rag/parsing/: __init__.py  base.py  cli.py  factory.py  registry.py  service.py
src/hybrid_rag/parsing/parsers/: __init__.py  latex_parser.py  pdf_parser.py
tests/chunking/: test_chunking.py  test_chunking_cli.py
tests/parsing/: test_base_parser.py  test_cli.py  test_latex_parser.py  test_package_exports.py  test_parsing_cli.py  test_pdf_parser.py
tests/parsing/fixtures/: CR.tex  sample_cr.tex
tests/parsing/fixtures/bibliographies/: articles.bib  livres.bib  online.bib  rapports.bib
