[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-rag-engine"
version = "0.1.0"
description = "Hybrid RAG engine parsing foundation."
requires-python = ">=3.10"

[project.scripts]
hybrid-rag-parsing = "hybrid_rag.parsing.cli:main"
hybrid-rag-chunking = "hybrid_rag.chunking.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
